--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.1.0"
+    "react-scripts": "0.1.0",
+    "redux-logger": "^2.6.1"
   },
   "dependencies": {
-    "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
-    "redux-thunk": "^2.1.0"
+    "redux-promise": "^0.5.3",
+    "superagent": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
